# FastHOGGPU

./: CMakeLists.txt  main.cpp
SVM/: persondetectorwt.tcc
SequentialHOG/: CMakeLists.txt  SequentialHOG.cpp  SequentialHOG.h  sequentialDebug.cpp
cudaPrograms/: CMakeLists.txt  IImageManagerGPU.h  ISVMManagerGPU.h  ImageManagerGPU.cu  ImageManagerGPU.cuh  SVMManagerGPU.cu  SVMManagerGPU.cuh  common_structs.h  debugGPU.cpp  defs.h  runnercuda.cu  runnercuda.h  testcuda.cu  testcuda.h  utils.h
hostGPP/: CMakeLists.txt  ImageHandler.cpp  ImageHandler.h  gpu_svm_detection.cpp  runner.cpp  runner.h  svm_detection_measurements.cpp
